# flatten-imports

./: README.rst  pyproject.toml
flatten_imports/: __init__.py
